Makes typescript an optional peer dep

--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     ],
     "peerDependencies": {
         "typescript": "*"
+    },
+    "peerDependenciesMeta": {
+        "typescript": {
+            "optional": true
+        }
     }
 }
