Adds a test for the TS typing

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
         "plugnplay",
         "pnp"
     ],
+    "devDependencies": {
+        "typescript": "3.5.3"
+    },
     "peerDependencies": {
         "typescript": "*"
     },
